# env-manager

./: Cargo.toml  GEMINI.md  README.md  README_zh.md  todo.md
.github/workflows/: release.yml
scripts/: install_bash.sh  install_fish.sh  install_powershell.ps1  install_zsh.sh
src/: cli.rs  lib.rs  main.rs
src/config/: graph.rs  loader.rs  mod.rs  models.rs
src/core/: display.rs  mod.rs  script.rs
src/handles/: activate.rs  check.rs  deactivate.rs  fix.rs  global.rs  init.rs  mod.rs  profile.rs  status.rs  ui.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs  utils.rs
src/tui/components/: add_new.rs  edit.rs  list.rs  mod.rs  select_popup.rs
src/tui/event/: add_new.rs  confirm_delete.rs  confirm_exit.rs  edit.rs  list.rs  mod.rs  rename.rs
src/tui/views/: add_new.rs  edit.rs  list.rs  mod.rs
src/tui/widgets/: add_new_popup.rs  bottom.rs  confirm_delete_popup.rs  confirm_exit_popup.rs  empty.rs  header.rs  main_left.rs  main_right.rs  mod.rs  select_popup.rs
src/utils/: display.rs  env.rs  mod.rs  shell_generate.rs
templates/: fish.fish  posix.sh  powershell.ps1
