[package]
name = "env-manage"
version = "0.1.0"
edition = "2024"
default-run = "env-manage"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
daggy = "0.9.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
unicode-width = "0.1.11"

[[bin]]
name = "env-manage"
path = "src/main.rs"
